--- a/Contents/Material/Part A - Repetition/Lecture A.Rmd
+++ b/Contents/Material/Part A - Repetition/Lecture A.Rmd
@@ -12,7 +12,7 @@ output:
 
 # Welcome back
 
-## Programme 
+## Programme {.smaller}
 
 | **Day** |  **Time**     | **Purpose/Details** | **Material** | **Lecturer** | 
 |-------------|---------------|---------------------|--------------|--------------|
@@ -22,8 +22,7 @@ output:
 | December 11 | 13:00 - 15:30 | Generalized linear models | D | Anne |
 | December 12 | 9:00 - 12:00  | Data validation and editing  | E | Anne |
 | December 12 | 13:00 - 15:30 | Imputation | F  | Jolien |
-| December 13 | 9:00 - 12:00  | Evaluation, agreement on summary mission report | | | 
-|------------------------------------------------------------------|
+| December 13 | 9:00 - 12:00  | Evaluation, agreement on summary mission report | 
 
 ## Format
 - Lectures followed by practicals
@@ -148,7 +147,7 @@ starwars %>%
   summarise( n= n(), mean.height = mean(height))
 ```
 
-## Plotting
+## Plotting {.smaller}
 Plots in base R are fast and easy:
 ```{r}
 plot(starwars$height, starwars$mass)
