--- a/Contents/Material/Part C - Linear models/Lecture_C_handout.Rmd
+++ b/Contents/Material/Part C - Linear models/Lecture_C_handout.Rmd
@@ -76,8 +76,40 @@ If we want to know what these arguments do we can ask R:
 
 This will open a help page on the `lm()` function.
 
+## Benefits data {.smaller}
+Unemployment of blue collar workers:
+
+
+Column `stateur`: 
+
+* state unemployment rate (in %)
+
+Column `tenure`: 
+
+* years of tenure in jobs lost
+
+Column `age`:
+
+* age in years
+
+Column `joblost`:
+
+* reason for loss of job (position abolished, seasonal job, not performing well enough, other)
+
+##  Linear regression
+Linear regression model
+\[
+y_i=\alpha+\beta{x}_i+\varepsilon_i
+\]
+
+Assumptions:
+
+  -  $y_i$ conditionally normal with mean $\mu_i=\alpha+\beta{x}_i$
+  -  $\varepsilon_i$ are $i.i.d.$ with mean 0 and (constant) variance $\sigma^2$
+
+
 ## Continuous predictors {.smaller}
-To obtain a linear model with a main effect for `tenure`, we formulate $stateur\sim tenure$ 
+To obtain a linear regression model with a main effect for `tenure`, we formulate $stateur\sim tenure$ 
 ```{r warning=FALSE, message = FALSE}
 fit <- Benefits %$%
   lm(stateur~tenure)
@@ -300,31 +332,31 @@ plot(lm(outcome4 ~ pred4), which = 5)
 # Model fit & comparison
 ## R-squared
 
-```{r }
+```{r}
 summary(fit)$r.squared
 ```
 
-```{r }
+```{r}
 summary(fit)$adj.r.squared
 ```
 
 
 ## AIC and BIC
 Akaike's *An Information Criterion* 
-```{r }
+```{r}
 fit %>% 
   AIC()
 ```
 
 and *Bayesian Information Criterion*
-```{r }
+```{r}
 fit %>%
   BIC()
 ```
 
 ## Influence of cases
 DfBeta calculates the change in coefficients depicted as deviation in SE's.
-```{r }
+```{r}
 fit %>%
   dfbeta() %>%
   head(n = 7)
@@ -338,7 +370,7 @@ fit %>%
 
 ## Fitted values:
 Let's use the simpler `anscombe` data example
-```{r }
+```{r}
 fit <- anscombe %$% lm(y1 ~ x1)
 y_hat <- 
   fit %>%
@@ -375,3 +407,4 @@ predict(fit, interval = "prediction")
 - `lme4::lmer`: linear mixed effect models
 - `lme4::glmer`: generalized linear mixed effect models
 - `lme4::nlmer`: non-linear mixed effect models
+
