update lectures C and F

--- a/Contents/Material/Part C - Linear models/Lecture_C.Rmd
+++ b/Contents/Material/Part C - Linear models/Lecture_C.Rmd
@@ -375,3 +375,5 @@ predict(fit, interval = "prediction")
 - `lme4::lmer`: linear mixed effect models
 - `lme4::glmer`: generalized linear mixed effect models
 - `lme4::nlmer`: non-linear mixed effect models
+
+# Practical
